@@ -4,6 +4,9 @@ Changelog for Structure Synth:
 Add 'runAfter' tag to templates.
 Template filename: color when erronous.
 
+27 May 09 [MHC] More TemplateExport Code.
+[2h]			Recent files (not finisuhed).
+				
 26 May 09 [MHC] More TemplateExport Code. 
 [3h]			Persistence skeleton.
 				Refactored Template parsing. 
